@@ -64,8 +64,8 @@ public class TreeInfSolver extends AbstractInferenceSolver implements
 				if(prob.posTags.get(i).getLabel().startsWith("N") || 
 						prob.posTags.get(i).getLabel().startsWith("V")) {
 					TreeY y = new TreeY();
-					y.nodes.add(new Node("VAR", i, new ArrayList<Node>()));
-					y.nodes.add(new Node("VAR", j, new ArrayList<Node>()));
+					y.nodes.add(new Node("VAR", i, null, new ArrayList<Node>()));
+					y.nodes.add(new Node("VAR", j, null, new ArrayList<Node>()));
 					y.varTokens.get("V1").add(i);
 					y.varTokens.get("V2").add(j);
 					beam1.add(new Pair<TreeY, Double>(y, 
@@ -82,6 +82,7 @@ public class TreeInfSolver extends AbstractInferenceSolver implements
 				y.nodes.add(new Node("NUM", 
 						prob.ta.getTokenIdFromCharacterOffset(
 								prob.quantities.get(i).start), 
+								null,
 								new ArrayList<Node>()));
 				beam2.add(new Pair<TreeY, Double>(y, pair.getSecond() + 
 						wv.dotProduct(featGen.getQuantityFeatureVector(y))));
@@ -104,7 +105,7 @@ public class TreeInfSolver extends AbstractInferenceSolver implements
 		Collections.sort(y.nodes, new Comparator<Node>() {
 		    @Override
 		    public int compare(Node a, Node b) {
-		    		return (int) Math.signum(a.index - b.index);
+		    		return (int) Math.signum(a.span.getFirst() - b.span.getFirst());
 		    }
 		});
 		List<String> labels = null;
@@ -114,6 +115,7 @@ public class TreeInfSolver extends AbstractInferenceSolver implements
 				new PairComparator<Node>() {};
 		List<List<MinMaxPriorityQueue<Pair<Node, Double>>>> dpMat = 
 				new ArrayList<>();
+		int n = y.nodes.size();		
 		for(int i=0; i<=n; i++) {
 			dpMat.add(new ArrayList<MinMaxPriorityQueue<Pair<Node, Double>>>());
 			for(int j=0; j<=n; ++j) {
@@ -125,25 +127,19 @@ public class TreeInfSolver extends AbstractInferenceSolver implements
 		// CKY Beam Search
 		for(int j=1; j<=n; ++j) {
 			for(int i=j-1; i>=0; --i) {
-				if(i+1 == j && triggers.get(i).label.equals("NUMBER")) {
-					labels = new ArrayList<String>(
-							Arrays.asList("EXPR", "ADD", "SUB", "MUL", "DIV", "NULL"));
-				} else if(i+1 == j && triggers.get(i).label.equals("OP")) {
-					labels = new ArrayList<String>(
-							Arrays.asList("OP", "ADD", "SUB", "DIV"));
-				} else {
-					labels = new ArrayList<String>(
-							Arrays.asList("ADD", "SUB", "MUL", "DIV"));
-				}
-				if(i==0 && j==n) {
-					labels.remove("EXPR");
-					labels.remove("OP");
+				if(i+1 == j) {
+					y.nodes.get(i).span = new IntPair(i, j);
+					dpMat.get(i).get(j).add(new Pair<Node, Double>(y.nodes.get(i), 0.0));
+					continue;
+				} else if(i == 0 && j == n) {
 					labels.add("EQ");
+				} else {
+					labels.addAll(Arrays.asList("ADD", "SUB", "MUL", "DIV"));
 				}
 				for(String label : labels) {
-					for(List<IntPair> division : enumerateDivisions(x, i, j)) { 
+					for(int k=i+1; k<j; ++k) {
 						for(List<Pair<Node, Double>> childrenPairList : 
-							enumerateChildrenPairs(dpMat, division)) {
+							enumerateChildrenPairs(dpMat, i, k, j)) {
 							double score = 0.0;
 							List<Node> children = new ArrayList<>();
 							for(Pair<Node, Double> childrenPair : childrenPairList) {
@@ -153,34 +149,25 @@ public class TreeInfSolver extends AbstractInferenceSolver implements
 							score += 1.0*wv.dotProduct(featGen.getExpressionFeatureVector(
 									x, i, j, children, label));
 							dpMat.get(i).get(j).add(new Pair<Node, Double>(
-									new Node(label, new IntPair(i, j), children), score));
+									new Node(label, -1, new IntPair(i, j), children), score));
 						}
 					}
 				}
 			}
 		}
-		List<Node> queue = new ArrayList<Node>();
-		queue.add(dpMat.get(0).get(n).element().getFirst());
-		while(queue.size() > 0) {
-			Node expr = queue.get(0);
-			nodes.add(expr);
-			queue.remove(0);
-			for(Node child : expr.children) {
-				queue.add(child);
-			}
-		}
-		for(Node node : nodes) {
-			node.span.setFirst(node.span.getFirst()+x.eqSpan.getFirst());
-			node.span.setSecond(node.span.getSecond()+x.eqSpan.getFirst());
-		}
-		return new Pair<String, List<Node>>("", nodes);
+		Equation eq = new Equation(0, getEqString(x, dpMat.get(0).get(n).element().getFirst()));
+		TreeY pred = new TreeY(pair.getFirst());
+		pred.equation = eq;
+		return new Pair<TreeY, Double>(pred, pair.getSecond() + 
+				dpMat.get(0).get(n).element().getSecond());
 	}
 
 	public List<List<Pair<Node, Double>>> enumerateChildrenPairs(
 			List<List<MinMaxPriorityQueue<Pair<Node, Double>>>> dpMat,
-			List<IntPair> division) {
+			int i, int k, int j) {
 		List<List<Pair<Node, Double>>> childrenList = new ArrayList<>();
 		List<List<Pair<Node, Double>>> tmpList = new ArrayList<>();
+		List<IntPair> division = Arrays.asList(new IntPair(i, k), new IntPair(k, j));
 		childrenList.add(new ArrayList<Pair<Node, Double>>());
 		
 		for(IntPair ip : division) {
@@ -204,7 +191,7 @@ public class TreeInfSolver extends AbstractInferenceSolver implements
 	public static String getEqString(TreeX x, Node node) {
 		String str = "";
 		if(node.span.getFirst()+1 == node.span.getSecond()) {
-			if(node.label.equals("EXPR")) str = 
+			if(node.label.equals("NUM")) str = 
 					""+x.triggers.get(node.span.getFirst()).num;
 			if(node.label.equals("ADD")) str = "V+V";
 			if(node.label.equals("SUB")) str = "V-V";
